--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,5 +4,9 @@ RUN mkdir /code
 WORKDIR /code
 ADD package.json /code/
 RUN yarn install
+RUN npm build
+COPY . .
 
-CMD yarn dev -p 3000
+EXPOSE 3000
+# CMD yarn dev -p 3000
+CMD ["npm", "start"]
