--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,10 @@ FROM node:13
 
 RUN mkdir /code
 WORKDIR /code
-ADD package.json /code/
-RUN yarn install
-RUN npm build
 COPY . .
+RUN yarn install
+# RUN npm build
 
-EXPOSE 3000
-# CMD yarn dev -p 3000
-CMD ["npm", "start"]
+# EXPOSE 3000
+CMD yarn dev -p 3000
+# CMD ["npm", "start"]
