--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,8 @@ RUN mkdir /code
 WORKDIR /code
 COPY . .
 RUN yarn install
-# RUN npm build
+RUN npm build
 
-# EXPOSE 3000
-CMD yarn dev -p 3000
-# CMD ["npm", "start"]
+EXPOSE 3000
+# CMD yarn dev -p 3000
+CMD npm start -p 3000
