--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
     - 5432:5432
   frontend:
-    build: frontend
+    build: frontend/Dockerfile.dev
     ports:
     - 3000:3000
     volumes:
