--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,12 @@ FROM node:13
 
 RUN mkdir /code
 WORKDIR /code
-ADD package.json /code/
+
+COPY package.json yarn.lock ./
 RUN yarn install
 
-CMD yarn dev -p 3000
+COPY . .
+RUN npm run build
+
+EXPOSE 3000
+CMD npm start -p 3000
