--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,12 @@ FROM node:13
 
 RUN mkdir /code
 WORKDIR /code
-COPY . .
+
+COPY package.json .
 RUN yarn install
 RUN npm run build
+
+COPY . .
 
 EXPOSE 3000
 CMD npm start -p 3000
