--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ COPY package.json yarn.lock ./
 RUN yarn install
 
 COPY . .
-RUN npm run build
+RUN yarn run build
 
 EXPOSE 3000
-CMD npm start -p 3000
+CMD yarn start -p 3000
