--- a/backend/zappa_settings.json
+++ b/backend/zappa_settings.json
@@ -9,7 +9,7 @@
       "SubnetIds": ["subnet-02c8170b670b0c4df", "subnet-0a9bd034e0d43d078"],
       "SecurityGroupIds": ["sg-074c6991e4690e44a"]
     },
-    "certificate_arn": "arn:aws:acm:us-east-1:818831340115:certificate/0b42f140-7af8-4369-91f9-debd04bc1e2d",
+    "certificate_arn": "arn:aws:acm:us-east-1:818831340115:certificate/ab9d1772-860e-4277-92bd-bf574995e3d7",
     "manage_roles": false,
     "role_name": "PortunusZappaRole"
   },
@@ -23,6 +23,10 @@
   },
   "staging": {
     "extends": "base",
-    "domain": "api-staging.portunus.willing.com"
+    "domain": "api-staging.login.legalplans.com"
+  },
+  "prod": {
+    "extends": "base",
+    "domain": "api-prod.login.legalplans.com"
   }
 }
